--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,37 @@
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawerlayout"
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
-    tools:context=".MainActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
+        <!-- Toolbar布局-->
+        <include layout="@layout/toolbar"/>
+
+        <!-- 顶部Tab标签布局-->
+        <include layout="@layout/include_top"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawerlayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg">
 
     <!-- 左菜单-->
     <FrameLayout
         android:id="@+id/menu_left"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#03909f">
+        android:background="#ffffff">
 
     </FrameLayout>
 
@@ -23,7 +40,7 @@
         android:layout_width="100dp"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:background="#03909f">
+        android:background="#ffffff">
 
     </FrameLayout>
 
@@ -43,16 +60,24 @@
             <!--app:pstsTabTextColor="@color/tab_text_normal"-->
             <!--app:pstsTabTextSize="16sp"/>-->
 
-        <include layout="@layout/include_top"/>
-
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <!-- 底部歌曲选项布局-->
         <include layout="@layout/include_bottom"/>
 
     </LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
 
-</android.support.v4.widget.DrawerLayout>
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:src="@android:drawable/ic_btn_speak_now"-->
+        <!--android:gravity="end|bottom"/>-->
+
+</android.support.design.widget.CoordinatorLayout>
