--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -1,35 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ListItemLinearLayout"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="12.0px"
-    android:background="#00000000"
-    android:gravity="center_vertical"
-    android:orientation="vertical" >
-    <TextView
+    android:layout_height="70dp"
+    android:background="#38e7e7e7">
+
+    <TextView
+        android:id="@+id/tv_index"
+        android:layout_marginLeft="15dp"
+        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:textSize="12sp"
+        android:textColor="#d90dc6b0"
+        android:text="1"/>
+
+    <LinearLayout
+        android:layout_toRightOf="@+id/tv_index"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="20dp"
+        android:gravity="center_vertical">
+
+    <TextView
         android:id="@+id/tv_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="10.0px"
+        android:layout_marginTop="10dp"
         android:background="#00000000"
         android:ellipsize="middle"
         android:singleLine="true"
         android:text="Name"
-        android:textColor="#ffffffff"
-        android:textSize="20.0dip" />
+        android:textColor="#a60c97"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/tv_artist"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="8.0px"
+        android:layout_marginBottom="8dp"
         android:background="#00000000"
         android:ellipsize="middle"
         android:singleLine="true"
         android:text="Content"
-        android:textSize="12.0dip" />
+        android:textSize="15sp" />
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
