--- a/app/src/main/res/layout/include_bottom.xml
+++ b/app/src/main/res/layout/include_bottom.xml
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/img_playback_bt_play" />
+            android:background="@drawable/play_icon" />
     </RelativeLayout>
     <!-- item4 -->
 
